Responsive layout: fix overlap on small browser sizes

--- a/app/assets/stylesheets/cabals.css.scss
+++ b/app/assets/stylesheets/cabals.css.scss
@@ -2,37 +2,12 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-#cabal_container{
-}
 
-#map_area{
-    position:absolute;
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    height: 100%;
-}
-
-#map-canvas{
-    height: 100%;
-}
 
 .gmnoprint img { 
     max-width: none; 
 }
 
-
-#agenda_area{
-    position:absolute; 
-    width:200px;
-    height:500px;
-    overflow:auto;
-    top: 90px;
-    right: 0px;
-    background-color: #fff;
-    padding: 20px;
-    border-radius:5px;
-}
 
 .inputWrap{
     width: 180px;
@@ -104,34 +79,7 @@
     overflow-x: hidden;
 }
 
-#chat_area{
-    display: none;
-    position:absolute;
-    bottom:0px;
-    left: 0px;
-    width:700px;
-    height:140px;
-    overflow-x: hidden;
-    overflow-y: hidden;
-}
 
-#member_area{
-    display: none;
-    width:200px;
-    height:200px;
-    background-color: #fff;
-    position: absolute; 
-    right: 250px; 
-    bottom: 0px;
-    padding: 10px;
-    border-radius: 5px;
-}
-
-.action-buttons{
-    position:absolute;
-    top: 90px;
-    right: 250px;
-}
 
 #gomembers{
     width: 100px;
